fix:errormessageコード、add:必須入力マーク追加

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -5,7 +5,7 @@ ja:
       email: 'メールアドレス'
     attributes:
       post:
-        title: タイトル
+        title: メニュー名
         body: 本文
         image: 画像
         tag_names: タグ
