--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -9,6 +9,7 @@ ja:
         body: 本文
         image: 画像
         tag_names: タグ
+        tags: タグ
         spot: 店名
         address: 住所
       user:
